fix weid collection spacing issues

--- a/public/js/views/menu/room/layout/room-menu-layout.less
+++ b/public/js/views/menu/room/layout/room-menu-layout.less
@@ -30,3 +30,7 @@ html {
 .panel-content {
   padding-bottom: 6rem;
 }
+
+.left-menu-collection {
+  flex-shrink: 0;
+}
